# Cpp_Ogl

./: CMakeLists.txt  README.md
include/: camera.h  oglwindow.h  shader.h  shape.h
include/glad/: glad.h
res/shaders/: clrmatl.frag  clrmatl.vert  text.vert
res/stl/: TriadArrow-01.stl
src/: camera.cpp  glad.c  main.cpp  oglwindow.cpp  shape.cpp  viewcontrols.cpp
